--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,7 @@ default: &default
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
+  host: <%= ENV['PG_DATABASE_HOST'] %>
   username: <%= ENV['PG_DATABASE_USERNAME'] %>
   password: <%= ENV['PG_DATABASE_PASSWORD'] %>
 
